<resources>
    <string name="app_name">ReversePolishCalculator</string>
    <string name="button_number_1">1</string>
    <string name="button_number_2">2</string>
    <string name="button_number_3">3</string>
    <string name="button_number_4">4</string>
    <string name="button_number_5">5</string>
    <string name="button_number_6">6</string>
    <string name="button_number_7">7</string>
    <string name="button_number_8">8</string>
    <string name="button_number_9">9</string>
    <string name="button_number_0">0</string>

    <string name="button_decimal">.</string>
    <string name="button_enter">Enter</string>
    <string name="button_delete">Del</string>
    <string name="button_addition">+</string>
    <string name="button_subtraction">-</string>
    <string name="button_multiplication">*</string>
    <string name="button_division">/</string>
    <string name="button_drop">Drop</string>

    <string name="label_stack">Stack</string>

</resources>
